<resources>
    <string name="app_name">Lab1</string>
    <string name="your_text">Your text</string>
    <string name="monospace">Monospace</string>
    <string name="sans_serif">Sans Serif</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="serif">Serif</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>